Add all functionality to get pokemons list

--- a/src/assets/styles/modules/molecules/cards.scss
+++ b/src/assets/styles/modules/molecules/cards.scss
@@ -1,8 +1,8 @@
 .card {
-  padding: 16px;
+  padding: 2rem;
   background-color: var(--light-color-lighter);
-  border-radius: 25px;
+  border-radius: 1.56rem;
   box-shadow: rgb(0 0 0 / 9%) 0 3px 12px;
-  margin-bottom: 25px;
+  margin-bottom: 1.56rem;
   z-index: 1;
 }
