--- a/src/components/sections/pokemons/Pokemon.module.scss
+++ b/src/components/sections/pokemons/Pokemon.module.scss
@@ -10,4 +10,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
 }
